Rollback N°4361 - XSS in csvimport on develop

--- a/templates/base/components/input/input-textarea.html.twig
+++ b/templates/base/components/input/input-textarea.html.twig
@@ -12,5 +12,5 @@
             {% if oUIBlock.GetAdditionalCSSClassesAsString() %} class="{{ oUIBlock.GetAdditionalCSSClassesAsString() }}"{% endif %}
             {% if oUIBlock.GetPlaceHolder() %}  placeholder="{{ oUIBlock.GetPlaceHolder() }}" {% endif %}
             {% if oUIBlock.IsDisabled() %} disabled {% endif %}
-	>{{ oUIBlock.GetValue() }}</textarea>
+	>{{ oUIBlock.GetValue()|raw }}</textarea>
 {% endblock %}
